@@ -32,6 +32,12 @@
          "requires" : {
             "File::Spec" : "0",
             "Perl::Critic" : "1.130",
+            "Perl::Critic::Policy::Moose::ProhibitDESTROYMethod" : "1.05",
+            "Perl::Critic::Policy::Moose::ProhibitLazyBuild" : "1.05",
+            "Perl::Critic::Policy::Moose::ProhibitMultipleWiths" : "1.05",
+            "Perl::Critic::Policy::Moose::ProhibitNewMethod" : "1.05",
+            "Perl::Critic::Policy::Moose::RequireCleanNamespace" : "1.05",
+            "Perl::Critic::Policy::Moose::RequireMakeImmutable" : "1.05",
             "Perl::Critic::Utils" : "0",
             "Pod::Wordlist" : "0",
             "Test::CPAN::Changes" : "0",
