@@ -75,6 +75,12 @@ on 'configure' => sub {
 on 'develop' => sub {
   requires "File::Spec" => "0";
   requires "Perl::Critic" => "1.130";
+  requires "Perl::Critic::Policy::Moose::ProhibitDESTROYMethod" => "1.05";
+  requires "Perl::Critic::Policy::Moose::ProhibitLazyBuild" => "1.05";
+  requires "Perl::Critic::Policy::Moose::ProhibitMultipleWiths" => "1.05";
+  requires "Perl::Critic::Policy::Moose::ProhibitNewMethod" => "1.05";
+  requires "Perl::Critic::Policy::Moose::RequireCleanNamespace" => "1.05";
+  requires "Perl::Critic::Policy::Moose::RequireMakeImmutable" => "1.05";
   requires "Perl::Critic::Utils" => "0";
   requires "Pod::Wordlist" => "0";
   requires "Test::CPAN::Changes" => "0";
