@@ -37,6 +37,8 @@ PERL_TIDY_RC
     return;
 }
 
+__PACKAGE__->meta->make_immutable;
+
 1;
 
 # vim: ts=4 sts=4 sw=4 et: syntax=perl
