@@ -29,6 +29,8 @@ all_perl_files_ok( { trailing_whitespace => 1 }, grep { -d } qw( bin lib t xt) )
 TEST_BODY
 }
 
+__PACKAGE__->meta->make_immutable;
+
 1;
 
 # vim: ts=4 sts=4 sw=4 et: syntax=perl
