@@ -30,6 +30,8 @@ all_minimum_version_from_metayml_ok();
 TEST_BODY
 }
 
+__PACKAGE__->meta->make_immutable;
+
 1;
 
 # vim: ts=4 sts=4 sw=4 et: syntax=perl
