@@ -30,6 +30,8 @@ all_files_encoding_ok( grep { -d } qw( bin lib t xt ) );
 TEST_BODY
 }
 
+__PACKAGE__->meta->make_immutable;
+
 1;
 
 # vim: ts=4 sts=4 sw=4 et: syntax=perl
