@@ -35,6 +35,8 @@ all_pod_files_ok();
 TEST_BODY
 }
 
+__PACKAGE__->meta->make_immutable;
+
 1;
 
 # vim: ts=4 sts=4 sw=4 et: syntax=perl
