@@ -59,6 +59,8 @@ sub _get_stopwords {
     return uniq sort @stopwords;
 }
 
+__PACKAGE__->meta->make_immutable;
+
 1;
 
 # vim: ts=4 sts=4 sw=4 et: syntax=perl
